--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
       scale="3 3 3"
     ></a-entity>
 
+    <a-entity
+      gltf-model="assets/large_DDD_model2.glb"
+      position="30 0 10"
+      rotation="90 0 0"
+      scale="12 12 12"
+    ></a-entity>
+
     <a-entity environment="preset: default"></a-entity>
     <a-entity light="type:ambient; intensity:2.0"></a-entity>
 
@@ -68,4 +75,5 @@
 
 </body>
 </html>
+
 
